Fixing gallery overflowing

--- a/static/css/gallery_stylesheet.css
+++ b/static/css/gallery_stylesheet.css
@@ -35,6 +35,7 @@ body {
     height: 576px;
 }
 .carousel-holder {
+    margin-top: 14vh;
     width: auto;
     height: auto;
     display: flex;
